# dreamer

./: README.md  clean.sh  log.txt  output.txt  read.me  todo.txt
Dreamer Head Control v1.0/: fastTrig.c
Dreamer Head Controller/: log.txt
Dreamer Remote Controller/: log.txt
Dreamer Remote Controller v0.0.0.3/: randomGaze.py
GPIO_4C123asm/: .cproject  .project  GPIO.asm  GPIO.plg  GPIO.s  GPIO.uvproj
Sandboxes/: filewrite_test.py  kinematic_control.csv  kinematic_control_2017-09-12_10:15:13.901147.csv
Sandboxes/gaze_control/: CMakeLists.txt  README.md  kinematic_control_2017-09-12_10:13:11.173061.csv  package.xml  setup.py
Sandboxes/gaze_control/data/: .~lock.kinematic_control_2017-09-12_23:08:37.805840.csv#  .~lock.pretty_trajectory.csv#  head_square_eye_depth_change.csv  kinematic_control_2017-09-12_09:41:54.295712.csv  kinematic_control_2017-09-12_09:44:03.953773.csv  kinematic_control_2017-09-12_09:44:33.407757.csv  kinematic_control_2017-09-12_09:45:19.578307.csv  kinematic_control_2017-09-12_09:52:48.503351.csv  kinematic_control_2017-09-12_09:56:29.214251.csv  kinematic_control_2017-09-12_23:08:37.805840.csv  prioritized_control_big_head_square_small_eye_square.csv  prioritized_control_small_squares.csv  square_with_hold_at_center.csv  very_nice_traj.csv
Sandboxes/gaze_control/data/old_data/: correct_big_square_prioritized.csv  nice_square_unconstrained.csv  nice_squares.csv  pretty_trajectory.csv  prioritized_control_big_head_square_small_eye_square.csv
Sandboxes/gaze_control/data/square_data/: nice_big_square_1m.csv  no_intermediate_value_nice_big_square_1m.csv  no_limits_nice_big_square_1m.csv
Sandboxes/gaze_control/launch/: ar_indiv_marker_tracker.launch  ar_track_marker_rviz.rviz  dreamer_head_move.launch  dreamer_head_only.launch  dreamer_head_testbed.launch
Sandboxes/gaze_control/launch/kinect_tracking_integration/: dreamer_axis_paper.rviz  dreamer_only.rviz  init_demo_setup.launch  kinect_tracking_rviz.rviz  kinematics_pic.rviz
Sandboxes/gaze_control/launch/transform_publishers/: tf_broadcasters.launch
Sandboxes/gaze_control/src/: .gitignore  head_kinematics.py  joint_publish.py  modern_robotics.py  nullspace_test.py  orientation_control.py  sample_joint_publish.py  time_test.py  util_quat.py
Sandboxes/gaze_control/src/gaze_control_cpp/: CPP_GUI.py  CPP_GUI_params.py  UART_com.cpp  Waypoint.cpp  Waypoint.h  dreamerController.cpp  dreamerController.h  dreamerHighLevelController.cpp  dreamerHighLevelController.h  dreamerJointPublisher.cpp  dreamerJointPublisher.h  headKinematics.cpp  headKinematics.h  modernRobotics.cpp  modernRobotics.h  utilQuat.cpp  utilQuat.h
Sandboxes/gaze_control/src/gaze_control_cpp/minJerk/: Waypoint.cpp  Waypoint.h  minJerkCoordinates.cpp  minJerkCoordinates.h  minJerkSingle.cpp  minJerkSingle.h
Sandboxes/gaze_control/src/gaze_control_python/: GUI_dreamer.py  GUI_params.py  RunRandGaze.py  RunRemCtrl.py  UART_client.py  UART_com.py  UART_com_test.py  UART_com_thursday.py  UART_com_v2.py  detected_people_manager.py  dreamer_controller.py  dreamer_do_nothing.py  dreamer_high_level_control.py  dreamer_joint_publisher.py  fixed_marker_to_my_world_neck_tf_broadcaster.py  gaze_focus_states.py  head_kinematics.py  head_traj_fix.txt  joint_publish.py  marker_position_repeater_node.py  min_jerk_coordinates.py  min_jerk_modular_bounded.py  min_jerk_single.py  min_jerk_vel_boundary.py  my_world_neck_tf_broadcaster.py  orientation_control.py  program_constants.py  read_joint_names.py  tf_broadcaster_dreamer_marker_to_my_world_neck.py  tf_broadcaster_markers.py  tf_broadcaster_my_world_neck.py  time_test.py  traj_manager.py  util_quat.py
Sandboxes/gaze_control/src/plotting_scripts/: scatter_plot.py  simple_plot.py
Sandboxes/gaze_control/srv/: HeadJointCmd.srv  RunProgram.srv
Sandboxes/viz_tools/: CMakeLists.txt  package.xml
Sandboxes/viz_tools/marker_pub/: CMakeLists.txt  ros_pub.cpp  ros_pub.h
Sandboxes/viz_tools/src/: for_kin_test.py  gaze_markers.cpp  test_node2.cpp  test_node3.cpp  test_node4.cpp
Sandboxes/viz_tools/src/test_folder/: something.py
Sandboxes/viz_tools/utils/: CMakeLists.txt  DataManager.cpp  DataManager.h  LQR.cpp  LQR.h  Sejong_Thread.cpp  Sejong_Thread.h  comm_udp.cpp  comm_udp.h  pseudo_inverse.cpp  pseudo_inverse.hpp  utilities.cpp  utilities.h  wrap_eigen.cpp  wrap_eigen.hpp
TestBuild0003/: main.c  motors.c
TestBuild0005/: UART.uvproj  lights.c
TestBuild0008/: UART.uvproj  lights.c
TestBuild0010/: config.h  cosines.h  lightsASM.s  main.c
v0.1/: control.c  encoders.c
v0.2/: encoders.c
v0.4/: UART.uvproj  config.h  lights.c  lights.h  main.c  motors.c
v0.5/: UART.axf  UART.build_log.htm  UART.htm  UART.lnp  UART.map  UART.uvproj  UART_Dreamer v0.5.dep  config.h  encoders.c  encoders.crf  estop.crf  lights.d  (+8 more)
v0.5.1/: config.h
(+360 files in other folders)
